# chempy_hmc

./: .gitignore  CLAUDE.md
hmc_numpyro/: advi_corner.py  eval_ape.py  extract_weights.py  model.py  pyproject.toml
hmc_numpyro/TNG_set/paper_net/: corner_gauss_paper.py  emulator_paper.py  plot_n_stars_paper.py  run_hmc_paper.py  weights_paper.npz
hmc_numpyro/TNG_set/paper_net/posteriors/: posterior_N1.nc  posterior_N10.nc
hmc_numpyro/TNG_set/parent/: README.md  config.py  corner_plain.py  run_hmc.py
hmc_numpyro/alt_yields/paper_net/: README.md  config_paper.py  model_paper.py  run_all_paper.py
hmc_numpyro/alt_yields/parent/: config.py  diagnostics.py  emulator.py  plot_n_stars.py  plot_n_stars_100.py
hmc_numpyro/mock_chempyTNG/paper_net/: config_paper.py  diagnostics_paper.py  train_net.py
hmc_numpyro/mock_chempyTNG/parent/: config.py  corner_gauss.py  model.py  plot_n_stars.py  run_all.py
hmc_numpyro/mock_chempyTNG/parent_std/: README.md  build_standardization.py  config_std.py  diagnostics_std.py  emulator_std.py  model_std.py  run_all_std.py  run_hmc_std.py  standardization.npz  weights.npz
hmc_numpyro/paper_net/: config_paper.py  model_paper.py  plot_compare.py  run_all_paper.py
hmc_numpyro/paper_net/posteriors/: posterior_N1.npz  posterior_N10.npz  posterior_N200.npz
hmc_numpyro/plots/200_3k/: summary.txt
hmc_numpyro/plots/200_advi_dense/: summary.txt
hmc_numpyro/plots/N10/: summary.txt
hmc_numpyro/plots/N200/: summary.txt
hmc_numpyro/posteriors/: posterior_N10.nc  posterior_N10.npz
hmc_numpyro/posteriors/200_3k/: posterior_N200.npz
(+54 files in other folders)
